# src/frontend/openapi/openapi.json
@@ -1111,6 +1111,18 @@
         "title": "WatchlistUpdateRequest",
         "type": "object"
       }
+    },
+    "securitySchemes": {
+      "APIKeyHeader": {
+        "in": "header",
+        "name": "X-API-Key",
+        "type": "apiKey"
+      },
+      "Bearer": {
+        "in": "header",
+        "name": "Authorization",
+        "type": "apiKey"
+      }
     }
   },
   "info": {
@@ -3199,6 +3211,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Analyze",
         "tags": [
           "trading"
@@ -3218,6 +3238,14 @@
             "description": "Successful Response"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Balance",
         "tags": [
           "trading"
@@ -3257,6 +3285,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Batch",
         "tags": [
           "trading"
@@ -3297,6 +3333,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Switch Trading Channel",
         "tags": [
           "trading"
@@ -3336,6 +3380,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Day Roll",
         "tags": [
           "trading"
@@ -3375,6 +3427,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Execute",
         "tags": [
           "trading"
@@ -3394,6 +3454,14 @@
             "description": "Successful Response"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Active Orders",
         "tags": [
           "trading"
@@ -3434,6 +3502,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Cancel All Orders",
         "tags": [
           "trading"
@@ -3473,6 +3549,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Direct Order",
         "tags": [
           "trading"
@@ -3492,6 +3576,14 @@
             "description": "Successful Response"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Sync Orders",
         "tags": [
           "trading"
@@ -3573,6 +3665,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Order Trace",
         "tags": [
           "trading"
@@ -3592,6 +3692,14 @@
             "description": "Successful Response"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Positions",
         "tags": [
           "trading"
@@ -3631,6 +3739,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Reconcile",
         "tags": [
           "trading"
@@ -3670,6 +3786,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Reconcile Unlock",
         "tags": [
           "trading"
@@ -3713,6 +3837,14 @@
             "description": "Validation Error"
           }
         },
+        "security": [
+          {
+            "Bearer": []
+          },
+          {
+            "APIKeyHeader": []
+          }
+        ],
         "summary": "Trade Snapshot",
         "tags": [
           "trading"
